# scpyutils

./: .autoenv  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  cacheutils.py  classutils.py  curlutils.py  debugutils.py  dfutils.py  dictutils.py  formatutils.py  gitutils.py  hashutils.py  idutils.py  iputils.py  jsonutils.py  logutils.py  multiprocutils.py  pdutils.py  persistutils.py  picutils.py  plotutils.py  psutils.py  pyproject.toml  retryutils.py  setup.cfg  setup.py  smoothingutils.py  statsutils.py
scpyutils/: __init__.py  adornutils.py  cacheutils.py  formatutils.py  gitutils.py  inpututils.py  iputils.py  jobutils.py  logutils.py  miscutils.py  multiprocutils.py  nnutils.py  pdioutils.py  pdutils.py  persistutils.py  picutils.py  plotutils.py  projdirutils.py  projutils.py  restutils.py  shellutils.py  sklutils.py  smoothingutils.py  statsutils.py
