[tool.poetry]
name = "logger"
version = "0.1.0"
description = ""
authors = ["Sam Cohan <scohan@bigpanda.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorlog = ">=6.8.2"
python-json-logger = ">=2.0.7"
dill = ">=0.3.8"
joblib = ">=1.4.2"
pandas = ">=2.2.2"
boto3 = ">=1.34.132"
botocore = ">=1.34.132"
langchain-openai = ">=0.1.9"
tenacity = ">=8.4.2"
tqdm = ">=4.66.4"
requests = ">=2.32.3"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"
boto3-stubs = "^1.34.132"
joblib-stubs = "^1.4.2.3.20240619"
pandas-stubs = "^2.2.2.240603"


[tool.poetry.group.dev.dependencies]
flake8 = ">=6.1.0"
black = ">=23.12.0"
isort = ">=5.12.0"
mypy  = ">=1.7.1"
pytest = ">=7.4.2,<8"
pre-commit = ">=3.6.0"
debugpy = ">=1.8.0"
pytest-asyncio = ">=0.23.2"
pytest-dependency = ">=0.5.1"
pytest-cov = ">=4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"